feat: default authen system w token

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=thinklab-platform
 spring.data.mongodb.uri= ${MongoKey}
 spring.data.mongodb.database = ThinkLab
+spring.data.mongodb.auto-index-creation=true
