--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI/CD with Maven to EC2
+name: Java CI with Maven
 
 on:
   push:
@@ -9,6 +9,10 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: server # chạy trong thư mục `server`
+
     steps:
       - uses: actions/checkout@v4
 
@@ -20,17 +24,18 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: spring-boot-app
-          path: target/server-0.0.1-SNAPSHOT.jar
+          path: server/target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment: production
     env:
       EC2_HOST: ${{ secrets.EC2_HOST }}
       EC2_USER: ${{ secrets.EC2_USER }}
@@ -50,16 +55,16 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
-
-          echo "📦 Copying JAR to EC2..."
           scp $JAR_NAME $EC2_USER@$EC2_HOST:/home/$EC2_USER/$JAR_NAME
 
-          echo "🚀 Restarting Spring Boot app on EC2..."
           ssh $EC2_USER@$EC2_HOST "
-            # Kill old process
-            pkill -f 'java -jar' || true
+            echo 'Stopping app...'
+            sudo systemctl stop my-spring-app || true
 
-            # Start new one with nohup
-            nohup java -jar /home/$EC2_USER/$JAR_NAME > ~/app.log 2>&1 &
-            echo '✅ App restarted with nohup. Check ~/app.log for logs.'
+            echo 'Deploying new jar...'
+            sudo mv /home/$EC2_USER/$JAR_NAME /opt/my-spring-app/$JAR_NAME
+
+            echo 'Starting app...'
+            sudo systemctl start my-spring-app
+            sudo systemctl status my-spring-app --no-pager
           "
