--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,8 +13,14 @@ jobs:
       run:
         working-directory: server
 
+    env:
+      # Biến môi trường MongoDB (lấy từ GitHub Secrets)
+      SPRING_DATA_MONGODB_URI: ${{ secrets.SPRING_DATA_MONGODB_URI }}
+      ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 24
         uses: actions/setup-java@v4
@@ -52,18 +58,19 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
-      - name: Deploy to EC2 (simple mode)
+      - name: Deploy to EC2
         run: |
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
-
-          echo "Uploading JAR..."
           scp $JAR_NAME $EC2_USER@$EC2_HOST:/home/$EC2_USER/$JAR_NAME
 
-          echo "Deploying on EC2..."
           ssh $EC2_USER@$EC2_HOST << EOF
-            echo 'Stopping any existing app...'
-            pkill -f $JAR_NAME || true
+            echo 'Stopping app...'
+            sudo systemctl stop my-spring-app || true
 
-            echo 'Starting new app...'
-            nohup java -jar /home/$EC2_USER/$JAR_NAME > app.log 2>&1 &
-EOF
+            echo 'Deploying new jar...'
+            sudo mv /home/$EC2_USER/$JAR_NAME /opt/my-spring-app/$JAR_NAME
+
+            echo 'Starting app...'
+            sudo systemctl start my-spring-app
+            sudo systemctl status my-spring-app --no-pager
+          EOF
