--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,14 +13,8 @@ jobs:
       run:
         working-directory: server
 
-    env:
-      # Biến môi trường MongoDB (lấy từ GitHub Secrets)
-      SPRING_DATA_MONGODB_URI: ${{ secrets.SPRING_DATA_MONGODB_URI }}
-      ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
-
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 24
         uses: actions/setup-java@v4
@@ -61,16 +55,18 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
+        
+          echo "Uploading JAR..."
           scp $JAR_NAME $EC2_USER@$EC2_HOST:/home/$EC2_USER/$JAR_NAME
-
-          ssh $EC2_USER@$EC2_HOST << EOF
-            echo 'Stopping app...'
-            sudo systemctl stop my-spring-app || true
-
-            echo 'Deploying new jar...'
-            sudo mv /home/$EC2_USER/$JAR_NAME /opt/my-spring-app/$JAR_NAME
-
-            echo 'Starting app...'
-            sudo systemctl start my-spring-app
-            sudo systemctl status my-spring-app --no-pager
+        
+          echo "Deploying on EC2..."
+          ssh $EC2_USER@$EC2_HOST << 'EOF'
+           echo "Moving JAR to /opt/my spring-app..."
+            sudo mv /home/$EC2_USER/$JAR_NAME /opt/my spring-app/$JAR_NAME
+            sudo chown $EC2_USER:$EC2_USER /opt/my spring-app/$JAR_NAME
+        
+          echo "Restarting app..."
+          sudo systemctl stop my-spring-app.service || true
+          sudo systemctl start my-spring-app.service
+          sudo systemctl status my-spring-app.service
           EOF
