--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=thinklab-platform
 spring.data.mongodb.uri= ${MongoKey}
 spring.data.mongodb.database = ThinkLab
 spring.data.mongodb.auto-index-creation=true
+server.address=0.0.0.0
+server.port=8080
