--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.database = ThinkLab
 spring.data.mongodb.auto-index-creation=true
 server.address=0.0.0.0
 server.port=8080
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
